--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -190,11 +190,11 @@
                         <select id="openwebrx-sdr-profiles-listbox" onchange="sdr_profile_changed();">
                         </select>
                     </div>
-                    <div class="openwebrx-section-divider" onclick="toggleSection(this);"></div>
+                    <div class="openwebrx-section-divider" onclick="toggleSection(this);">Modes</div>
                     <div class="openwebrx-section">
                         <div class="openwebrx-modes openwebrx-panel-line"></div>
                     </div>
-                    <div class="openwebrx-section-divider" onclick="toggleSection(this);"></div>
+                    <div class="openwebrx-section-divider" onclick="toggleSection(this);">Controls</div>
                     <div class="openwebrx-section">
                         <div class="openwebrx-panel-line">
                             <div title="Mute on/off" class="openwebrx-button openwebrx-slider-button openwebrx-mute-button" onclick="toggleMute();">
@@ -242,7 +242,7 @@
                             <input title="Waterfall maximum level" id="openwebrx-waterfall-color-max" class="openwebrx-panel-slider" type="range" min="-200" max="100" value="50" step="1" onchange="updateWaterfallColors(1);" oninput="updateVolume()">
                         </div>
                     </div>
-                    <div class="openwebrx-section-divider" onclick="toggleSection(this);"></div>
+                    <div class="openwebrx-section-divider" onclick="toggleSection(this);">Visual</div>
                     <div class="openwebrx-section">
                         <div class="openwebrx-panel-line">
                             <div class="openwebrx-button openwebrx-square-button openwebrx-zoom-button" onclick="zoomInOneStep();" title="Zoom in one step"><svg viewBox="0 0 80 80"><use xlink:href="static/gfx/svg-defs.svg#zoom-in"></use></svg></div>
