--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -242,7 +242,7 @@
                             <input title="Waterfall maximum level" id="openwebrx-waterfall-color-max" class="openwebrx-panel-slider" type="range" min="-200" max="100" value="50" step="1" onchange="updateWaterfallColors(1);" oninput="updateVolume()">
                         </div>
                     </div>
-                    <div class="openwebrx-section-divider" onclick="toggleSection(this);">Visual</div>
+                    <div class="openwebrx-section-divider" onclick="toggleSection(this);">Range</div>
                     <div class="openwebrx-section">
                         <div class="openwebrx-panel-line">
                             <div class="openwebrx-button openwebrx-square-button openwebrx-zoom-button" onclick="zoomInOneStep();" title="Zoom in one step"><svg viewBox="0 0 80 80"><use xlink:href="static/gfx/svg-defs.svg#zoom-in"></use></svg></div>
